--- a/public/essays/index.html
+++ b/public/essays/index.html
@@ -4,6 +4,13 @@
     </head>
     <body>
         <h1>Homework in class</h1>
-        <h2>Q1. Explain the difference between HTML, CSS and JS.</h2>        
+        <h2>Q1. Explain the difference between HTML, CSS and JS.</h2> 
+        <p>
+            
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet recusandae temporibus consectetur officiis autem minus nulla, illum perspiciatis beatae cupiditate adipisci, harum cum enim aperiam molestias, ex cumque expedita possimus.
+        </p>       
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores necessitatibus saepe consequuntur dolor, fugiat accusamus aspernatur. Reprehenderit temporibus culpa possimus, distinctio, molestias, voluptatum corrupti illum excepturi voluptate repellendus laboriosam itaque?
+        </p>
     </body>
 </html>
