S8 Calss eork Tabbed Content

--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,9 @@
                 border: 0;
             }
 
-            div {
-                border:solid 3px teal;
-                padding: 20px;
+            div 
+               /* border:solid 3px teal; */
+               /* padding: 20px; */S
             }
         </style>
 
