--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,15 @@
                 border: 0;
             }
 
-            div 
+            div {
                /* border:solid 3px teal; */
-               /* padding: 20px; */S
+               /* padding: 20px; */
+            }
+
+            .nested{
+                max-width: 1200px;
+                margin: 0px auto;
+                padding: 0px 10px;
             }
         </style>
 
